# conv-relu-pooling-operator

./: CMakeLists.txt  build.sh  pytorch_test.py  readme.md
build-android-armv7a-with-neon/: CMakeCache.txt  Makefile  cmake_install.cmake
build-android-armv7a-with-neon/tests/: Makefile  cmake_install.cmake  test
build-x86-64/: CMakeCache.txt  Makefile  cmake_install.cmake
build-x86-64/tests/: Makefile  cmake_install.cmake  test
include/intel/: cpu.h  mat.h
src/: cpu.cpp  mat.cpp
src/operator/: convolution.cpp  convolution.h  fuse_conv_pool_relu.cpp  fuse_conv_pool_relu.h  pooling.cpp  pooling.h  relu.cpp  relu.h
tests/: CMakeLists.txt  test.cc
